Se arreglan mensajes de notificación

--- a/vacunApp/Views/Inicio.html
+++ b/vacunApp/Views/Inicio.html
@@ -336,9 +336,14 @@
     
     <footer class="u-clearfix u-footer u-grey-80" id="sec-d28a"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-container-style u-group u-group-1">
-          <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <p class="u-small-text u-text u-text-1">VacunApp © 2021</p>
-          </div>
+            <div class="u-container-layout u-valign-middle u-container-layout-1">
+                <h6>
+                    <a href="mailto:vacunapp21@gmail.com?subject=Mail Desde vacunapp.com" role="button">
+                        <img src="../Assets/imagenes/icon-gmail.png" style="width:27px; height:27px;" />
+                    </a>&nbsp&nbsp&nbspVacunApp © 2021
+                </h6>
+
+            </div>
         </div>
       </div></footer>
   </body>
