--- a/vacunApp/Assets/StyleSolicitud.css
+++ b/vacunApp/Assets/StyleSolicitud.css
@@ -19,11 +19,8 @@
     }
 
 .divtabla {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-43%);
-    width: 920px;
+    transform: translate(35%,30%);
+    width: 60%;
     height: 400px;
     padding: 15px 40px;
     box-sizing: border-box;
