--- a/vacunApp/Assets/styleProfile.css
+++ b/vacunApp/Assets/styleProfile.css
@@ -48,11 +48,8 @@
     }
 
 .profilebox {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -30%);
-    width: 500px;
+    transform: translate(50%, 14%);
+    width: 50%;
     height: 720px;
     padding: 12px 40px;
     box-sizing: border-box;
